[project]
name = "mlflow-gen-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community==0.0.33",
    "langchain==0.1.16",
    "langchain-openai==0.0.8",
    "openai==1.12.0",
    "tiktoken==0.6.0",
    "mlflow==2.12.1",
    "faiss-cpu>=1.10.0",
    "starlette>=0.45.3",
    "fastapi>=0.115.8",
    "watchfiles>=1.0.4",
    "slowapi>=0.1.9",
    "gunicorn>=21.2.0",
    "waitress>=3.0.2",
    "load-dotenv>=0.1.0",
    "dagshub>=0.5.6",
]
